[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyst-sports"
version = "0.1.0"
description = "Sports market analytics for OddsHarvester-style JSON exports"
readme = "START.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
analyst = "analyst.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
